--- a/alembic.ini
+++ b/alembic.ini
@@ -44,7 +44,7 @@ prepend_sys_path = .
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "path_separator"
 # below.
-# version_locations = %(here)s/bar:%(here)s/bat:%(here)s/alembic/versions
+version_locations = = %(here)s/migrations/versions
 
 # path_separator; This indicates what character is used to split lists of file
 # paths, including version_locations and prepend_sys_path within configparser
