--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,21 @@ services:
   - type: web
     name: learning-log-pwa
     env: python
-    buildCommand: pip install -r requirements.txt
-    releaseCommand: alembic upgrade head
-    startCommand: gunicorn app:app -b 0.0.0.0:$PORT
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app"
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: learning-log-db
+          property: connectionString
+      - key: SECRET_KEY
+        generateValue: true
+      - key: CALENDAR_ID
+        sync: false
+      - key: SERVICE_CRED
+        sync: false
+
+databases:
+  - name: learning-log-db
+    databaseName: learning_log
+    user: learning_log_user
