--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
+    pythonVersion: 3.11.8
     envVars:
       - key: DATABASE_URL
         fromDatabase:
