--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==2.3.3
 Flask-Login==0.6.2
 Flask-WTF==1.1.1
 WTForms==3.0.1
-email-validator==2.1.0
+email-validator==2.0.0.post2
 SQLAlchemy==1.4.46
 python-dotenv==1.0.0
 google-auth==2.25.2
