--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "作業記録アプリ",
-  "short_name": "LearningLog",
+  "short_name": "Working Log",
+  "description": "作業記録管理アプリケーション",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
